--- a/TKV2026_soubory/sheet015.htm
+++ b/TKV2026_soubory/sheet015.htm
@@ -46,12 +46,12 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=9108 style='border-collapse:
- collapse;table-layout:fixed;width:6833pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=9223 style='border-collapse:
+ collapse;table-layout:fixed;width:6920pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=177 style='mso-width-source:userset;mso-width-alt:6473;
- width:133pt'>
+ <col class=xl70 width=186 style='mso-width-source:userset;mso-width-alt:6802;
+ width:140pt'>
  <col class=xl70 width=91 style='mso-width-source:userset;mso-width-alt:3328;
  width:68pt'>
  <col class=xl70 width=41 style='mso-width-source:userset;mso-width-alt:1499;
@@ -97,8 +97,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=186 style='mso-width-source:userset;mso-width-alt:6802;
+ width:140pt'>
  <col class=xl70 width=91 style='mso-width-source:userset;mso-width-alt:3328;
  width:68pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -278,7 +278,7 @@ else
  width:68pt'>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 width=47 style='height:15.0pt;width:35pt'></td>
-  <td class=xl70 width=177 style='width:133pt'></td>
+  <td class=xl70 width=186 style='width:140pt'></td>
   <td class=xl70 width=91 style='width:68pt'></td>
   <td class=xl70 width=41 style='width:31pt'></td>
   <td class=xl70 width=92 style='width:69pt'></td>
@@ -306,7 +306,7 @@ else
   <td class=xl70 width=91 style='width:68pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=186 style='width:140pt'></td>
   <td class=xl70 width=91 style='width:68pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -410,7 +410,7 @@ else
   <td class=xl70 width=91 style='width:68pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl182 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl178 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2026 - BRTNICE - 501 DO</td>
   <td class=xl143>&nbsp;</td>
   <td class=xl143>&nbsp;</td>
@@ -1087,7 +1087,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl164 style='border-left:none'>4</td>
+  <td class=xl164 style='border-left:none'>5</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl162>&nbsp;</td>
@@ -1216,16 +1216,16 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Pivoňka Pavel [CZE001936]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>900</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1550</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>69
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>103
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>6,5</td>
+  <td class=xl148 style='border-top:none;border-left:none'>6,0</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1353,17 +1353,17 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Čermák Jiří [CZE051443]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>750</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Milan [CZE049910]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1250</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>57
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>83
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl164 style='border-top:none;border-left:none'>2</td>
+  <td class=xl164 style='border-top:none;border-left:none'>3</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1581,12 +1581,12 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Milan [CZE049910]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>700</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vala Tomáš [CZE076565]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>950</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>53
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>63
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1809,14 +1809,14 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Musil Luboš [CZE050653]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>700</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Čermák Jiří [CZE051443]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>750</td>
   <td class=xl139></td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
   <td colspan=2 class=xl187 style='border-right:.5pt solid black;border-left:
-  none'>179 Kč</td>
+  none'>248 Kč</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2034,10 +2034,9 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Doležal Michal
-  [CZE055580]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>650</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Musil Luboš [CZE050653]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>700</td>
   <td class=xl139></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2170,8 +2169,8 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Brussmann Jiří
-  [CZE056087]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Doležal Michal
+  [CZE055580]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl139></td>
@@ -2514,9 +2513,10 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Vala Tomáš [CZE076565]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>600</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Brussmann Jiří
+  [CZE056087]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2545,9 +2545,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Pivoňka Pavel [CZE001936]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2661,7 +2663,7 @@ else
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
-  <td class=xl82 style='border-top:none'>Čermák Jiří [CZE051443]</td>
+  <td class=xl82 style='border-top:none'>Pivoňka Pavel [CZE001936]</td>
   <td class=xl145 style='border-left:none'>1</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
@@ -2686,9 +2688,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Milan [CZE049910]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2794,15 +2798,15 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>9</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Musil Daniel [CZE060863]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Bednář Martin [CZE005253]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
-  <td class=xl82 style='border-top:none'>Doležal Michal [CZE055580]</td>
+  <td class=xl82 style='border-top:none'>Čermák Jiří [CZE051443]</td>
   <td class=xl82 style='border-top:none;border-left:none'>1</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
@@ -2826,9 +2830,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Bednář Martin [CZE005253]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2931,15 +2937,19 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl78 style='height:15.0pt'></td>
-  <td colspan=3 style='mso-ignore:colspan'></td>
+  <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
+  font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
+  none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>10</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Musil Daniel [CZE060863]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
-  <td class=xl82 style='border-top:none'>0</td>
-  <td class=xl82 style='border-top:none;border-left:none'>0</td>
+  <td class=xl82 style='border-top:none'>Doležal Michal [CZE055580]</td>
+  <td class=xl82 style='border-top:none;border-left:none'>1</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2962,9 +2972,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vala Tomáš [CZE076565]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3067,8 +3079,13 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl78 style='height:15.0pt'></td>
-  <td colspan=3 style='mso-ignore:colspan'></td>
+  <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
+  font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
+  none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>11</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Zavadiak Vasyl
+  [WRD080011]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3096,9 +3113,12 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Zavadiak Vasyl
+  [WRD080011]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -14502,7 +14522,7 @@ else
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
   <td width=47 style='width:35pt'></td>
-  <td width=177 style='width:133pt'></td>
+  <td width=186 style='width:140pt'></td>
   <td width=91 style='width:68pt'></td>
   <td width=41 style='width:31pt'></td>
   <td width=92 style='width:69pt'></td>
@@ -14530,7 +14550,7 @@ else
   <td width=91 style='width:68pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=186 style='width:140pt'></td>
   <td width=91 style='width:68pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
